--- a/src/tibs.stem.Migrator/appsettings.json
+++ b/src/tibs.stem.Migrator/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=VINO; Database=LeadCentral;User ID=sa;Password=Welcome3#;"
+    "Default": "Server=TARGARYEN; Database=HoltLeadCentral;User ID=sa;Password=Welcome3#;"
   }
 }
