--- a/src/tibs.stem.Web.Public/appsettings.json
+++ b/src/tibs.stem.Web.Public/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=VINO; Database=LeadCentral;User ID=sa;Password=Welcome3#;"
+    "Default": "Server=TARGARYEN; Database=HoltLeadCentral;User ID=sa;Password=Welcome3#;"
   },
   "App": {
     "WebSiteRootAddress": "http://localhost:45776/",
