--- a/src/tibs.stem.Web.Host/appsettings.json
+++ b/src/tibs.stem.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=VINO; Database=LeadCentral;User ID=sa;Password=Welcome3#;"
+    "Default": "Server=TARGARYEN; Database=HoltLeadCentral;User ID=sa;Password=Welcome3#;"
     //"Default": "Server=TIBSSERVER; Database=LeadCentralT;User ID=sa;Password=Welcome3#;"
   },
 
