--- a/src/tibs.stem.Migrator/appsettings.json
+++ b/src/tibs.stem.Migrator/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     //"Default": "Server=TARGARYEN; Database=HoltLeadCentral;User ID=sa;Password=Welcome3#;"
-    "Default": "Server=TIBSSERVER; Database=LeadCentral;User ID=sa;Password=Welcome3#;"
+    "Default": "Server=vino; Database=LeadCentral;User ID=sa;Password=Welcome3#;"
 
   }
 }
