--- a/src/tibs.stem.Web.Host/tibs.stem.Web.Host.csproj
+++ b/src/tibs.stem.Web.Host/tibs.stem.Web.Host.csproj
@@ -1073,6 +1073,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.1" />
     <PackageReference Include="Abp.Castle.Log4Net" Version="2.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="NPOI" Version="2.3.0" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
     <PackageReference Include="Microsoft.Owin.Cors" Version="3.0.1" />
