--- a/src/tibs.stem.Application/tibs.stem.Application.csproj
+++ b/src/tibs.stem.Application/tibs.stem.Application.csproj
@@ -15,6 +15,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="EPPlus.Core" Version="1.5.1" />
+    <PackageReference Include="NPOI" Version="2.3.0" />
+    <PackageReference Include="SpreadsheetLight" Version="3.4.9" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
     <Reference Include="System.Drawing" />
