--- a/src/tibs.stem.Web.Public/appsettings.json
+++ b/src/tibs.stem.Web.Public/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     //"Default": "Server=TARGARYEN; Database=HoltLeadCentral;User ID=sa;Password=Welcome3#;"
-    "Default": "Server=vino; Database=LeadCentral;User ID=sa;Password=Welcome3#;"
+    "Default": "Server=vino; Database=LeadCentralT;User ID=sa;Password=Welcome3#;"
 
   },
   "App": {
