--- a/src/tibs.stem.Web.Host/appsettings.json
+++ b/src/tibs.stem.Web.Host/appsettings.json
@@ -12,8 +12,8 @@
   },
   "App": {
     "ServerRootAddress": "http://localhost:22742",
-    "ClientRootAddress": "http://localhost:4200/",
-    "CorsOrigins": "http://localhost:4200,http://localhost:49152"
+    "ClientRootAddress": "http://localhost:4200/,http://localhost:4300/",
+    "CorsOrigins": "http://localhost:4200,http://localhost:49152,http://localhost:4300"
   },
   "Authentication": {
     "Facebook": {
