--- a/src/tibs.stem.Application/tibs.stem.Application.csproj
+++ b/src/tibs.stem.Application/tibs.stem.Application.csproj
@@ -26,6 +26,9 @@
   <ItemGroup>
     <ProjectReference Include="..\tibs.stem.Core\tibs.stem.Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Web" />
+  </ItemGroup>
   <PropertyGroup Condition="'$(TargetFramework)'=='net461'">
     <DefineConstants>FEATURE_LDAP;FEATURE_SIGNALR</DefineConstants>
   </PropertyGroup>
